--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <body>
     <div id="container">
-        <img src="logotcero.png" alt="Imagem" width="150">
+        <img src="/logotcero.png" alt="Imagem" width="150">
         <br><br>
         <h2>Secretaria Estratégia de Tecnologia da Informação e Comunicação - SETIC</h2>
         <br><br>
