--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Senha Comlexa TCE-RO</title>
+    <title>Gerador de Senha Comlexa</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -72,9 +72,7 @@
 
 <body>
     <div id="container">
-        <img src="logotcero.png" alt="Imagem" width="150">
-        <br><br>
-        <h2>Secretaria Estratégia de Tecnologia da Informação e Comunicação - SETIC</h2>
+        
         <br><br>
         <h1>Gerador de Senha Complexa TCE-RO</h1>
 
