cleildogomes@gmail.com

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="container">
         
         <br><br>
-        <h1>Gerador de Senha Complexa TCE-RO</h1>
+        <h1>Gerador de Senha Complexa</h1>
 
         <label for="password-length">Escolha a quantidade de caracteres:</label>
 
