update, removido caracter especiais

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         function generatePassword() {
             const length = parseInt(passwordLengthSelect.value);
-            const charset = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%&*";
+            const charset = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
             let password = "";
 
             for (let i = 0; i < length; i++) {
