--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <h1>CGS Tecnoloogia</h1>
     <title>Gerador de Senha Comlexa</title>
     <style>
         body {
